monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4118/A4118.mc4
/* (c) https://github.com/MontiCore/monticore */
package  de.monticore.grammar.cocos.invalid.A4118;

grammar A4118{

  external A;

  astrule A = Name;
}    
    